Fix width causing scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,16 +24,16 @@ body {
 
 .main {
   height: 100%;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
-  min-width: 100%;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px){
   .App {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
     height: 100%;
+    overflow-x: hidden;
   }
 }
