--- a/src/Cart/Cart.styles.scss
+++ b/src/Cart/Cart.styles.scss
@@ -16,7 +16,6 @@ $text-color: #828282;
 }
 
 .cart-content {
-    width: 100%;
     margin: 80px 30px 80px 45px;
 }
 
@@ -126,7 +125,6 @@ $text-color: #828282;
         }
 
         .column {
-            width: 92%;
             height: fit-content;
         }
 
